se agrago requerimiento para cuando una aplicacion sera revisada por un administrador

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
@@ -62,3 +62,7 @@ lbl_promtTextArea=Enter a description of your application
 lbl_invalidMsjTA=Invalid data
 lbl_promtURL=Enter the url of your application for download
 lbl_invalidURL=Invalid URL
+lbl_CommentarioAdminAPP=Comment
+lbl_aprobarAPP=Approve
+lbl_rechazarAPP=Reject
+lbl_appReview=Applications for review
