--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
@@ -61,3 +61,8 @@ lbl_appRelated=Aplicaciones relacionadas
 lbl_promtTextArea=Ingresa la descripci\u00f3n de tu aplicaci\u00f3n
 lbl_invalidMsjTA=Datos inv\u00e1lidos
 lbl_promtURL=Ingresa la url de tu aplicacion para ser descargada
+lbl_CommentarioAdminAPP=Comentario
+lbl_aprobarAPP=Aprobar
+lbl_rechazarAPP=Rechazar
+lbl_invalidURL=URL inv\u00e1lida
+lbl_appReview=Aplicaciones por revisar
