Se actualiza etiqueta para descargas de aplicacion

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
@@ -54,7 +54,7 @@ lbl_category=Category
 msg_appExito=The application has been loaded onto the platform and will be validated before publication. Thank you for your contribution.
 lbl_appDownloads=Downloads:
 lbl_rated=Rating:
-lbl_descargarAPP=Download Application 
+lbl_descargarAPP=Download
 lbl_dsRelated=Related datasets
 lbl_viewAll=View all
 lbl_appRelated=Related Applications
