Cambio de estilos a enlaces  de las estadisticas en tabla

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource_en.properties
@@ -29,3 +29,9 @@ lbl_col1_table_UserSat=Institution
 lbl_col2_table_UserSat=Dataset
 lbl_col3_table_UserSat=Appreciation
 lbl_col4_table_UserSat=Comments
+lbl_title_gral=Statistics
+lbl_tabla1=Dataset by institution
+lbl_tabla2=Dataset by application
+lbl_tabla3=Use of datasets
+lbl_tabla4=Uso of applications
+lbl_tabla5=Users satisfaction  
