--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
@@ -42,3 +42,15 @@ lbl_approve=Approve
 lbl_searchDS2=Search Result
 msg_noresults=No results
 msg_secs=seconds
+msg_uptokdataset=Successfully updated information Dataset
+msg_bePublisher=Need to be PUBLISHER
+lbl_myDatasets=The Datasets
+lbl_date=Date
+lbl_stats=Statistics
+lbl_actions=Actions
+lbl_noDatasetsFound=There are no Datasets
+lbl_views=Views
+lbl_download=Downloads
+lbl_rank=Rating
+lbl_contributions=Contributions
+lbl_comments=Comments
