--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_es.properties
@@ -42,3 +42,15 @@ lbl_approve=Aprobado
 lbl_searchDS2=Resultado de la b\u00fasqueda
 msg_noresults=No hubo resultados
 msg_secs=segundos
+msg_uptokdataset=Se actualiz\u00f3 correctamente la informaci\u00f3n del Dataset
+msg_bePublisher=Se necesita ser PUBLICADOR
+lbl_myDatasets=Mis Datasets
+lbl_date=Fecha
+lbl_stats=Estad\u00edsticas
+lbl_actions=Acciones
+lbl_noDatasetsFound=No se encontraron Datasets
+lbl_views=Visitas
+lbl_download=Descargas
+lbl_rank=Valoraci\u00f3n
+lbl_contributions=Contribuciones
+lbl_comments=Comentarios
