Se agregan etiquetas para internacionalizacion

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
@@ -66,3 +66,5 @@ lbl_CommentarioAdminAPP=Comment
 lbl_aprobarAPP=Approve
 lbl_rechazarAPP=Reject
 lbl_appReview=Applications for review
+lbl_validTermsAddApp=To add an application it is necessary to accept the terms and conditions
+msj_textAreaError=Enter characters valid special characters are not accepted in the description of the application
