--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
@@ -66,3 +66,5 @@ lbl_aprobarAPP=Aprobar
 lbl_rechazarAPP=Rechazar
 lbl_invalidURL=URL inv\u00e1lida
 lbl_appReview=Aplicaciones por revisar
+lbl_validTermsAddApp=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
+msj_textAreaError=Introduzca caracteres v\u00e1lidos no se aceptan caracteres especiales en la descripcion de la aplicaci\u00f3n
