Se agregaron etiquetas internacionalizadas

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
@@ -42,7 +42,7 @@ lbl_approve=Approve
 lbl_searchDS2=Search Result
 msg_noresults=No results
 msg_secs=seconds
-msg_uptokdataset=Successfully updated information Dataset
+msg_uptokdataset=Successfully updated Dataset information
 msg_bePublisher=Need to be PUBLISHER
 lbl_myDatasets=The Datasets
 lbl_date=Date
@@ -54,3 +54,10 @@ lbl_download=Downloads
 lbl_rank=Rating
 lbl_contributions=Contributions
 lbl_comments=Comments
+lbl_edit=Edit
+lbl_remove=Delete
+lbl_noInstitutionInfo=No Institution information found
+lbl_mydata=My Data
+lbl_newds=New Dataset
+lbl_mydatasets=My Datasets
+lbl_activities=Activity
