--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -54,3 +54,14 @@ lbl_notDSfound=Datasets not found
 lbl_all=View All
 lbl_download=Download
 lbl_filename=File
+lbl_pages=Page
+lbl_reviewDataset=Dataset for review
+lbl_gowebsite=Go to Website
+msg_emailNotify=Review notification was sent to the publisher of the Dataset. Change of status to
+lbl_notassigned=Not assigned
+lbl_approved=Approve
+lbl_reject=Reject
+lbl_viewallupdates=View all updates
+lbl_viewmore=view more
+lbl_updatehistory=Updates history
+lbl_viewall=View all
