Modificación de gráficas en Recurso ChartsResource e internacionalización en StatisticsResource

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource_en.properties
@@ -35,3 +35,6 @@ lbl_tabla2=Dataset by application
 lbl_tabla3=Use of datasets
 lbl_tabla4=Uso of applications
 lbl_tabla5=Users satisfaction  
+lbl_DowmloadCSV=Download CSV
+lbl_TotalDS=Datasets total :
+lbl_TotalApp=Applictations total :
