--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/CommentsViewResource_es.properties
@@ -18,7 +18,7 @@ msgErrInvalidEmail=El correo electr\u00f3nico es requerido
 
 lblComment=Comentario
 promptMsgComment=Ingresa tu comentario
-lblCommentFault=Comentario invalido solo se aceptan letas, numeros y signos de puntuaci\u00f3n
+lblCommentFault=Comentario invalido, solo se aceptan letas, numeros y signos de puntuaci\u00f3n
 msgErrInvalidComment=El comentario es requerido
 
 
