--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
@@ -8,7 +8,7 @@ lbl_version=Version
 lbl_size=Size
 lbl_topic=Topic
 lbl_toplevellink=Top Level link
-lbl_technicallink=Technical link
+lbl_technicallink=Contact
 lbl_weburl=Web Site
 lbl_contactemail=Contact Email
 lbl_format=Format
