--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -27,7 +27,7 @@ lbl_val3=Good
 lbl_val2=Regular
 lbl_description=Description
 lbl_institution=Institution
-lbl_technicalContact=Technical Link
+lbl_technicalContact=Contact
 lbl_created=Creation
 lbl_publisherwebsite=Publisher WebSite
 lbl_emailContact=Contact Email 
