Modificación de la reunión del 2 de Julio (Eliminación del total de descargas de aplicaciones y datasets)

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/StatisticsResource_en.properties
@@ -38,3 +38,9 @@ lbl_tabla5=Users satisfaction
 lbl_DowmloadCSV=Download CSV
 lbl_TotalDS=Datasets total :
 lbl_TotalApp=Applictations total :
+lbl_Average1=Not recommended
+lbl_Average2=Regular
+lbl_Average3=Good
+lbl_Average4=Recommended
+lbl_Average5=Excellent
+lbl_GoBack=GoBack
