--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSPublisherResource_en.properties
@@ -61,3 +61,5 @@ lbl_mydata=My Data
 lbl_newds=New Dataset
 lbl_mydatasets=My Datasets
 lbl_activities=Activity
+msg_delokdataset=The dataset was successfully removed
+msg_delNOTokdataset=The dataset could not be removed
