se modifico la etiqueta de viewAll ya que la descripcion estaba en ingles en la seccion erronea

--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_en.properties
@@ -49,7 +49,7 @@ lbl_titleFault=Title invalid
 lbl_textAreaFault=no debe introducir caracteres especiales solo letras y numeros
 lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
 lbl_notAppFound=Applications not found
-lbl_all=Todos
+lbl_all=View all
 lbl_category=Category
 msg_appExito=The application has been loaded onto the platform and will be validated before publication. Thank you for your contribution.
 lbl_appDownloads=Downloads:
