--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/ApplicationResource_es.properties
@@ -49,7 +49,7 @@ lbl_titleFault=Titulo inv\u00e1lido
 lbl_textAreaFault=no debe introducir caracteres especiales solo letras y numeros
 lbl_terminosCondicionesFault=Para agregar una aplicacion es necesario aceptar los t\u00e9rminos y condiciones
 lbl_notAppFound=No se encontraron aplicaciones
-lbl_all=View all
+lbl_all=Todos
 lbl_category=Categoria
 msg_appExito=La aplicaci\u00f3n ha sido cargada en la plataforma y ser\u00e1 validada antes de su publicaci\u00f3n. Gracias por tu colaboraci\u00f3n.
 lbl_appDownloads=Descargas:
