--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DSHomeResource_en.properties
@@ -15,5 +15,5 @@ lbl_bydownload=Downloaded
 lbl_byvaluated=Rated
 lbl_data=Data
 lbl_catalogdata=View Data Catalog
-lbl_about=about
+lbl_about=information about
 lbl_alltopics=All topics
