--- a/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
+++ b/swbproys/LODP/src/com/infotec/lodp/swb/resources/DataSetResource_en.properties
@@ -38,10 +38,10 @@ lbl_rated=Rating
 lbl_updateDS=Dataset updates
 lbl_versionNum=Version / revision number
 lbl_DateUpdate=Update
-lbl_exportDSmeta=Export Dataset info
+lbl_exportDSmeta=Export info to
 lbl_views=Views
 lbl_downloads=Downloads
-lbl_statsDS=Statistics Dataset
+lbl_statsDS=Statistics
 lbl_relatesApps=Related Applications
 lbl_NOrelatesApps=There are no related applications
 lbl_lastDownload=Last Download
@@ -52,7 +52,7 @@ lbl_numapps=Number of Applications
 lbl_val1=Not Advisable
 lbl_notDSfound=Datasets not found
 lbl_all=View All
-lbl_download=Download
+lbl_download=Dataset download
 lbl_filename=File
 lbl_pages=Page
 lbl_reviewDataset=Dataset for review
